--- a/styles/globals.css
+++ b/styles/globals.css
@@ -84,9 +84,10 @@ html{
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   width: 100%;
-  padding: 0 !important;
+  overflow-x: hidden !important;
 }
 
 a {
